add-on/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-prd"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.kubeprd.msdigital.xyz
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
        path: /
        pathType: Prefix
